[project]
name = "agentc-langgraph"
description = "Collection of LangGraph-specific classes and functions used with the Couchbase Agent Catalog project."
authors = [
    { name = "Glenn Galvizo", email = "glenn.galvizo@couchbase.com" }
]
license = "Apache-2.0"
dynamic = ["version"]
requires-python = ">=3.12"

[project.urls]
repository = "https://github.com/couchbaselabs/agent-catalog"
documentation = "https://couchbaselabs.github.io/agent-catalog/api.html#langchain-langgraph"

[tool.poetry]
name = "agentc-langgraph"
version = "0.0.0"
packages = [
  { include = "agentc_langgraph" }
]

[tool.poetry.dependencies]
python = "^3.12"
langchain-core = ">=0.2.28"
langgraph = "^0.4.1"
langgraph-checkpointer-couchbase = "^1.0.5"

# The version of this package will be updated dynamically.
agentc-core = { path = "../../agentc_core", develop = true }

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
pytest = "^8.3.2"
pytest-asyncio = "^0.26.0"
pytest-retry = "^1.7.0"

# Note: we only depend on the CLI for tests.
[tool.poetry.group.dev.dependencies.agentc-cli]
path = "../../agentc_cli"
develop = true

[tool.poetry-monoranger-plugin]
enabled = true
monorepo-root = "../../../"
version-pinning-rule = '=='

[tool.poetry.requires-plugins]
poetry-monoranger-plugin = ">=0.4.1"

[build-system]
requires = [
    "poetry-core>=2.1.0"
]
build-backend = "poetry.core.masonry.api"
