[project]
name = "agentc-llamaindex"
description = "Collection of LlamaIndex-specific classes and functions used with the Couchbase Agent Catalog project."
authors = [
    { name = "Glenn Galvizo", email = "glenn.galvizo@couchbase.com" }
]
license = "Apache-2.0"
dynamic = ["version"]
requires-python = ">=3.11"

[project.urls]
repository = "https://github.com/couchbaselabs/agent-catalog"
documentation = "https://couchbaselabs.github.io/agent-catalog/api.html#llamaindex"

[tool.poetry]
name = "agentc-llamaindex"
version = "0.0.0"
packages = [
    { include = "agentc_llamaindex" }
]

[tool.poetry.urls]
Homepage = "https://couchbase.com"
Documentation = "https://docs.couchbase.com"
Repository = "https://github.com/couchbaselabs/agent-catalog"

[tool.poetry.dependencies]
python = "^3.11"
couchbase = "^4.3.6"
joblib = "^1.4.2"
llama-index = "^0.12.47"
pydantic = "^2.10.6"
requests = "^2.32.3"
pydantic-settings = "^2.7.1"

# The version of this package will be updated dynamically.
agentc-core = { path = "../../agentc_core", develop = true }

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
pytest = "^8.3.2"
pytest-retry = "^1.7.0"

[build-system]
requires = [
    "poetry-core>=2.1.0"
]
build-backend = "poetry.core.masonry.api"
