[tool.poetry]
name = "research-agent"
version = "0.1.0"
description = "Research agent application built using Couchbase Agent Catalog."
repository = "https://github.com/couchbaselabs/agent-catalog"
authors = [
    "Tanvi Johari <tanvi.johari@couchbase.com>",
    "Thejas N U <thejas.nu@couchbase.com>"
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
couchbase = "^4.3.0"
# For Google search
serpapi = "^0.1.5"
google_search_results = "^2.4.2"
# For graphs
ipython = "^8.27.0"
langgraph = "^0.2.52"
langchain-community = "^0.3.10"
langchain-experimental = "^0.3.3"
matplotlib = "^3.9.3"

[tool.poetry.dependencies.agentc]
path = "../../../libs/agentc"
extras = ["langchain"]
develop = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"